@@ -4186,7 +4186,7 @@ DLL.  (@strong{NB:} this requires system command @command{nm} to be on the
 compiler toolchain specified via @code{Makeconf} (can be customized by
 environment variable @env{BINPREF}). If not found there, it must be on the
 @env{PATH}. On Unix this would be normal when using a package with compiled
-code (which are the only ones this checks), but Windows' users should check.)
+code (which are the only ones this checks), but Windows' users should check.
 Default: false (but true for CRAN submission checks).
 
 @item _R_CHECK_NO_STOP_ON_TEST_ERROR_
@@ -4213,11 +4213,13 @@ See
 `Writing R Extensions'
 @end ifclear
 for the rationale of this check (and why even @option{-Werror} is
-unsafe).  Environment variable @env{_R_CHECK_COMPILATION_FLAGS_KNOWN_}
-can be set to a space-separated set of flags which come from the @R{}
-build used for testing (flags such as @option{-Wall} and
-@option{-Wextra} are already known).  For example, for  CRAN build of 
-@R{} >= 4.0.0 on macOS one could use
+unsafe).
+
+Environment variable @env{_R_CHECK_COMPILATION_FLAGS_KNOWN_} can be set
+to a space-separated set of flags which come from the @R{} build used
+for testing (flags such as @option{-Wall} and @option{-Wextra} are
+already known).  For example, for CRAN build of @R{} >= 4.0.0 on macOS
+one could use
 @example
 _R_CHECK_COMPILATION_FLAGS_KNOWN_="-mmacosx-version-min=10.13" 
 @end example
@@ -4334,13 +4336,42 @@ subdirectory of the @R{} session directory for the @code{check} process:
 if any files or directories are left there they are removed.  Since some
 of these might be out of the user's control, environment variable
 @env{_R_CHECK_THINGS_IN_TEMP_DIR_EXCLUDE_} can specify an (extended
-regex) pattern of file names not to be reported -- CRAN uses
+regex) pattern of file paths not to be reported -- CRAN uses
 @samp{^ompi.} for directories left behind by OpenMPI.  There are rare
 instances where @env{TEMPDIR} is not respected and so files are left in
-@file{/tmp} (and not reported): one example is
+@file{/tmp} (and not reported, but see the nest item): one example is
 @file{/tmp/boost_interprocess} on some OSes.
 @c macOS is one.
 Default: false (but true for CRAN submission checks).
+
+@item _R_CHECK_THINGS_IN_OTHER_DIRS_
+Check and report at the end of the check run if new files or directories
+are created in a selected set of directories during the check run.
+(This is confined to files owned by the user running the check process.)
+Currently the directories monitored are the home directory, @file{/tmp}
+(excluding @file{RtmpXXXXXX} dirs), @file{~/.cache} (recursively) and
+@file{~/.local/share} (recursively) or their equivalants on Windows and
+macOS (the directories in which the default settings for
+@code{tools::R_user_dir()} use a @file{R} subdirectory).  Additional
+directories can be specified in environment variable
+@env{_R_CHECK_THINGS_IN_OTHER_DIRS_XTRA_}, separated by semicolons.
+
+Environment variable @env{_R_CHECK_THINGS_IN_OTHER_DIRS_EXCLUDE_} can
+specify an (extended regex) pattern of file paths not to be reported --
+this should match absolute file paths with home represented by
+@file{~}.  For example, on a Linux system
+@example
+'^~/.cache/(mozilla/firefox|mesa_shader_cache)/'
+@end example
+@noindent
+matches cache directories used by Firefox and OpenGL.
+
+Note that other processes (include check runs in parallel) may create
+new files in these directories which will get reported.  However, this
+optional check is very useful for narrowing down possible packages which
+are leaving behing unexpected files.
+@c
+Default: false
 
 @item _R_CHECK_BASHISMS_
 Check the top-level scripts @file{configure} (unless generated by
@@ -4394,8 +4425,9 @@ Default: false (but true for CRAN submission checks).
 
 @item _R_CHECK_MATRIX_DATA_
 By default, the check for a mismatch between the data length and the
-size of a matrix gives a warning: setting this to a true value gives an
-error with a compact traceback.
+dimensions in a call to @code{matrix} gives a warning: setting this to a
+true value gives an error with a compact traceback.
+@c
 Default: false (but true for CRAN submission checks).
 @end vtable
 
